tests/NormalTests/paczka1/fuzzy1/20432104.err
Error in line 20: uoJq26nkEDg A535 23,5
Error in line 16: 8dot84 A535 34,7
Error in line 22: EmbMzWQXMC A535 77,9
Error in line 26: EmbMzWQXMC S85 4,8
Error in line 33: S232 A704 83,7
Error in line 37: S232 S85 48,0
Error in line 29: RVhZwjdyc A704 75,1
